--- a/Introduction_to_Numpy.ipynb
+++ b/Introduction_to_Numpy.ipynb
@@ -6,7 +6,6 @@
       "name": "Introduction to Numpy.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOyh1X8No2RLVPxsv49LoT5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +22,24 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/shubhanshu1995/My-Medium-Articles/blob/master/Introduction_to_Numpy.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aKrcUWTQzBtU",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Medium Article Link to be added soon !!**\n",
+        "\n",
+        "## **Connect with me on:-**\n",
+        "**Linkedin:** [shubhanshu001](https://www.linkedin.com/in/shubhanshu001/) <br />\n",
+        "**Github:** [shubhanshu1995](https://github.com/shubhanshu1995) <br />\n",
+        "**Medium:** [@shubhanshu1995](https://medium.com/@shubhanshu1995) <br />\n",
+        "**Instagram:** [Shubhanshu Singh](https://www.instagram.com/shubhanshu._.singh/) <br />\n",
+        "**Facebook:** [shubhanshu1995](https://www.facebook.com/shubhanshu1995) <br />\n",
+        "**Twitter:** [TheCuriousLad](https://twitter.com/TheCuriousLad) <br />"
       ]
     },
     {
