--- a/A_Comprehensive_Guide_to_NumPy.ipynb
+++ b/A_Comprehensive_Guide_to_NumPy.ipynb
@@ -6,7 +6,7 @@
       "name": "A Comprehensive Guide to NumPy.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO9ne7RdLQIkyCBnenfNPl3",
+      "authorship_tag": "ABX9TyOaT2g0/wWnGVhxvVFC6v00",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Medium Article Link:**\n",
+        "# **My Medium Article Link:**\n",
         "## **https://towardsdatascience.com/numpy-the-king-of-scientific-computing-with-python-d1de680b811d?source=friends_link&sk=5de650b6beb5fc66ac5f7164c1eceac3**\n",
         "\n",
         "### **Connect with me on:-**\n",
