--- a/A_Comprehensive_Guide_to_NumPy.ipynb
+++ b/A_Comprehensive_Guide_to_NumPy.ipynb
@@ -1669,7 +1669,7 @@
       "source": [
         "b = [100,200,300]\n",
         "\n",
-        "# converting to numpy 2d array\n",
+        "# converting to numpy array\n",
         "np_b = np.array(b)\n",
         "\n",
         "#show\n",
